[project]
name = "agenticlanggraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.7",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.4",
    "langsmith>=0.8.14",
    "python-dotenv>=1.2.2",
]
